--- a/spreadsheet-sync/index.html
+++ b/spreadsheet-sync/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://miro.com/app/static/sdk.1.1.js"></script>
+    <script src="src/tabletop.js"></script>
     <script src="src/main.js"></script>
   </head>
 </html>
